projects/vb6parse/snapshots/parsers/cst/invalid_syntax/mismatched_keywords/while_with_loop_failures.snap
---
source: projects/vb6parse/tests/invalid_syntax/mismatched_keywords.rs
expression: "failures.iter().map(|f| format!(\"{f:?}\")).collect::<Vec<_>>()"
---
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    While x > 0\\n        x = x - 1\\n    Loop\\nEnd Sub\\n\", error_offset: 54, line_start: 5, line_end: 6, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [LoopKeyword] }), severity: Error, labels: [], notes: [] }"
- "ErrorDetails { source_name: \"test.bas\", source_content: \"\\nSub Test()\\n    While x > 0\\n        x = x - 1\\n    Loop\\nEnd Sub\\n\", error_offset: 62, line_start: 6, line_end: 7, kind: Parser(UnexpectedTokens { expected: [\"statement\"], found: [EndKeyword, Whitespace, SubKeyword] }), severity: Error, labels: [], notes: [] }"
